# ImageProccessingProject

./: .gitignore
Data/: K
Data/Report/: SegmentationReport.odt
notebooks/: GenerateDepthImage.ipynb  PrepareResults.ipynb  RANSAC_plane_approach.ipynb  prepare_results.ipynb
vi_packages/: CMakeLists.txt
vi_packages/colorseg/demo/: colorseg_go.cpp
vi_packages/remseg/include/remseg/: segmentator.hpp
vi_packages/roadseg/: CMakeLists.txt
vi_packages/roadseg/demo/: roadseg_go.cpp
vi_packages/roadseg/include/roadseg/: road_distance_func.h  road_vertex.h
vi_packages/roadseg/src/: road_distance_func.cpp  road_vertex.cpp
